--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseStats.cpp" />
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
   </ItemGroup>
