--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="MainWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
