--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="General.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DerivedStats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseStats.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="General.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DerivedStats.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
