Reworked entire project to work off of dynamic list

--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="General.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
+    <ClCompile Include="StatDefinitions.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
