Added Advantages section; not complete.

--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Advantages.h" />
     <ClInclude Include="BaseStats.h" />
     <ClInclude Include="DerivedStats.h" />
     <ClInclude Include="Engine.h" />
@@ -88,6 +89,7 @@
     <ClInclude Include="WindowWrapper.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Advantages.cpp" />
     <ClCompile Include="BaseStats.cpp" />
     <ClCompile Include="DerivedStats.cpp" />
     <ClCompile Include="Engine.cpp" />
