--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="DerivedStats.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Advantages.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseStats.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="StatDefinitions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Advantages.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
