--- a/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
+++ b/BunniesCharacterBuilder/BunniesCharacterBuilder.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Advantages.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AdvCalc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseStats.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Advantages.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AdvCalc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
